--- a/webpage/src/components/About.css
+++ b/webpage/src/components/About.css
@@ -1,8 +1,16 @@
 .card-img{
     width: auto;
-    height: 100px;
+    height: 365px;
+    border: 5px solid black;
+    margin: 39px
 }
 
 .cards{
-    display: grid;
+    
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 2rem 1rem;
+    text-align: center;
 }
