--- a/webpage/src/components/About.css
+++ b/webpage/src/components/About.css
@@ -1,7 +1,8 @@
 .card-img{
     width: auto;
     height: 365px;
-    border: 5px solid black;
+    border: 4px solid black;
+    
     margin: 39px
 }
 
@@ -10,4 +11,7 @@
     flex: 1 1 auto;
     padding: 2rem 1rem;
     text-align: center;
+}
+div.card
+{    border: 0px solid rgba(0,0,0,.125);
 }
