--- a/webpage/src/components/Facts.css
+++ b/webpage/src/components/Facts.css
@@ -27,3 +27,10 @@
 .figure-caption{
     justify-content: left;
   }
+  .facts{
+    
+        text-align: center;
+        color:#EA4335;
+        font-size:xx-large;
+    
+  }
