--- a/webpage/src/components/Home.css
+++ b/webpage/src/components/Home.css
@@ -1,5 +1,5 @@
 .container{
-    padding-top: 10px;
+    /* padding-top: 10px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,4 +16,13 @@
     height: 405px;
     width: auto;
     margin-left: 91px;
+}
+.home{
+    display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  height:100vh;
+  /* width:100vw; */
+  min-height: 100vh;
 }
