--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -10,7 +10,7 @@ h2{text-align: center;
       box-sizing: border-box;
      
      padding: 0;
-      margin: auto;
+      margin: 25px auto;
   }
 
   div.card{
