--- a/src/components/About.css
+++ b/src/components/About.css
@@ -9,8 +9,20 @@
 
 .card-body {
     flex: 1 1 auto;
-    padding: 2rem 1rem;
+    /* padding: 2rem 1rem; */
     text-align: center;
+}
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    padding: 8px;
+    width: 91%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+      /* background-image: linear-gradient(#b6eec7
+, #7dc2ad); */
 }
 div.card
 {    border: 0px solid rgba(0,0,0,.125);
