--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -28,3 +28,8 @@
   background-image: linear-gradient(#d4dadd
 , #3dc0e7);
 }
+.style
+{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
