--- a/src/components/About.css
+++ b/src/components/About.css
@@ -10,14 +10,15 @@
 .card-body {
     flex: 1 1 auto;
     /* padding: 2rem 1rem; */
-    text-align: center;
+    text-align: left;
 }
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 5px;
-    padding: 8px;
+    padding-top: 50px;
+    padding-left: 130px;
     width: 91%;
     flex-wrap: wrap;
     justify-content: space-evenly;
