--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,16 +1,24 @@
-.link {
+/* .link {
     margin-right: 15px;
     background-image: linear-gradient(#1d93ca
 , #3dc0e7);
-}
-.link:hover {
-    color: #420f0a !important;
+} */
+.nav-link:hover {
+    color: #a0dee9 !important;
 }
 /* .main {
     background-color: rgb(187, 21, 21); 
     box-shadow: 0 0px 12px 0px gray;
 } */
-.navbar{
+/* .navbar{
     background-image: linear-gradient(#1d93ca
-, #3dc0e7);
+, #000000);
+background-color: #000000;
+} */
+.bg-light {
+    background-color: #706e6e!important;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: rgb(255 255 255);
 }
