--- a/src/components/Facts.css
+++ b/src/components/Facts.css
@@ -3,9 +3,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 250px;
+    /* margin-left: 250px; */
     padding: 8px;
     width: 50%;
+    margin: 5px auto;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
@@ -34,3 +35,53 @@
         font-size:xx-large;
     
   }
+
+  .text{
+    color: rgb(255, 255, 255);
+    font-style: bold;
+    /* background-color: rgb(87, 87, 87); */
+  }
+
+  .d-block ,.w-100{
+    opacity:0.7;
+  }
+
+  .container {
+    /* padding-top: 10px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px 107px;
+    padding: 8px;
+    width: 91%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.img-fluid {
+    width: 319px;
+    height: 334px;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 auto;
+    padding: 1rem 1rem;
+    height: 291px;
+}
+
+
+.container {
+    /* padding-top: 10px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px auto;
+    padding: 8px;
+    width: 91%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
