--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -25,11 +25,52 @@
   height:100vh;
   /* width:100vw; */
   min-height: 100vh;
-  background-image: linear-gradient(#d4dadd
-, #3dc0e7);
+  background-image: linear-gradient(#41727a
+, #c4aeee1a);
 }
-.style
-{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
-}
+.home-header {
+    padding-top: 80px !important;
+    padding-left: 10px !important;
+  }
+  
+  .home-section {
+    position: relative;
+    display: flex;
+    z-index: -1;
+    /* background-image: var(--image-gradient), url(./Assets/bg.png); */
+    background-position: top center;
+    background-repeat: no-repeat;
+    padding-bottom: 30px !important;
+    padding-top: 30px !important;
+  }
+  
+  .home-content {
+    padding: 9rem 0 2rem !important;
+    color: rgb(90, 25, 25);
+    text-align: left;
+  }
+  
+  .heading {
+    font-size: 2.4em !important;
+    padding-left: 50px !important;
+  }
+  
+  .heading-name {
+    font-size: 2.5em !important;
+    padding-left: 45px !important;
+  }
+  
+  .main-name {
+    color: #030303;
+  }
+  
+  .Typewriter__wrapper {
+    font-size: 2.2em !important;
+    color: #080808 !important;
+    font-weight: 600 !important;
+  }
+  .Typewriter__cursor {
+    font-size: 2.4em !important;
+    color: #020202 !important;
+  }
