--- a/src/components/About.css
+++ b/src/components/About.css
@@ -44,10 +44,22 @@ div.card
 .card-img, .card-img-bottom, .card-img-top {
     width: 100%;
     height: 345px;
+    border-radius: 6px;
+    padding: 18px;
 }
 
 .card-body {
     flex: 1 1 auto;
     padding: 1rem 1rem;
     height: 291px;
+        
+}
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 auto;
+    padding: 2rem 1rem;
+    height: 279px;
 }
