--- a/src/components/Reviews.css
+++ b/src/components/Reviews.css
@@ -22,3 +22,15 @@ b{
     flex: auto;
     align-items: center;
 }
+
+
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 auto;
+    padding: 2rem 1rem;
+    height: 126px;
+}
