--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background-color: rgb(117, 219, 211);
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(transparent, #054880);
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: linear-gradient(transparent, #00c6ff);
+}
 
