--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,13 +1,14 @@
 .container{
     /* padding-top: 10px; */
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     margin: 5px;
     padding: 8px;
     width: 91%;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-evenly; */
+   
 
 }
 
@@ -18,11 +19,11 @@
     margin-left: 91px;
 }
 .home{
-    display: flex;
+    /* display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height:100vh;
+  height:100vh; */
   /* width:100vw; */
   min-height: 100vh;
   background-image: linear-gradient(#41727a
@@ -30,20 +31,22 @@
 }
 
 .home-header {
-    padding-top: 80px !important;
-    padding-left: 10px !important;
+    /* padding-top: 80px !important;
+    padding-left: 10px !important; */
   }
   
   .home-section {
-    position: relative;
+    /* position: relative;
     display: flex;
-    z-index: -1;
+    z-index: -1; */
     /* background-image: var(--image-gradient), url(./Assets/bg.png); */
-    background-position: top center;
+    /* background-position: top center;
     background-repeat: no-repeat;
     padding-bottom: 30px !important;
-    padding-top: 30px !important;
+    padding-top: 30px !important; */
   }
+
+
   
   .home-content {
     padding: 9rem 0 2rem !important;
@@ -73,4 +76,8 @@
   .Typewriter__cursor {
     font-size: 2.4em !important;
     color: #020202 !important;
+  }
+
+  .home-content{
+
   }
